[gd_scene load_steps=20 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]
[ext_resource path="res://cards/BunnyCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://cards/EmberCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://cards/SilkCard.tscn" type="PackedScene" id=4]
[ext_resource path="res://cards/FlowerCard.tscn" type="PackedScene" id=5]
[ext_resource path="res://cards/EnduranceAuraCard.tscn" type="PackedScene" id=6]
[ext_resource path="res://Card.tres" type="Theme" id=7]
[ext_resource path="res://font/EnterCommand-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://PauseButton.gd" type="Script" id=9]
[ext_resource path="res://sprites/interface/pause.png" type="Texture" id=10]
[ext_resource path="res://ButtonTextures.gd" type="Script" id=11]
[ext_resource path="res://sprites/interface/forward.png" type="Texture" id=12]
[ext_resource path="res://SettingsButton.gd" type="Script" id=13]
[ext_resource path="res://sprites/interface/gear.png" type="Texture" id=14]
[ext_resource path="res://sprites/interface/cross.png" type="Texture" id=15]
[ext_resource path="res://LoseScreen.gd" type="Script" id=16]
[ext_resource path="res://font/gooey.ttf" type="DynamicFontData" id=17]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 17 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardContainer" type="HBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 376.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card2" parent="CardContainer" instance=ExtResource( 2 )]
margin_left = 72.0
margin_right = 168.0

[node name="Card4" parent="CardContainer" instance=ExtResource( 3 )]
margin_left = 172.0
margin_right = 268.0

[node name="Card3" parent="CardContainer" instance=ExtResource( 4 )]

[node name="Card" parent="CardContainer" instance=ExtResource( 5 )]
margin_left = 372.0
margin_right = 468.0

[node name="Card5" parent="CardContainer" instance=ExtResource( 6 )]
margin_left = 472.0
margin_right = 568.0

[node name="WaveMoneyRect" type="ColorRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_top = 18.0
margin_right = 134.0
margin_bottom = 48.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="WaveLabel" type="Label" parent="WaveMoneyRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -145.0
theme = ExtResource( 7 )
text = "LEVEL 99"
align = 1
autowrap = true
clip_text = true
uppercase = true

[node name="MoneyLabel" type="Label" parent="WaveMoneyRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 125.0
theme = ExtResource( 7 )
text = "MONEY 20"
align = 1
autowrap = true
clip_text = true
uppercase = true

[node name="PauseMenu" type="NinePatchRect" parent="."]
pause_mode = 2
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="PauseRectangle" type="NinePatchRect" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -23.5
margin_right = 88.0
margin_bottom = 23.5

[node name="TextureRect2" type="ColorRect" parent="PauseMenu/PauseRectangle"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="PausedRect" type="NinePatchRect" parent="PauseMenu/PauseRectangle"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="PauseMenu/PauseRectangle/PausedRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1
valign = 1
uppercase = true

[node name="SettingsMenu" type="NinePatchRect" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="ColorRect" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="SettingsRectangle" type="NinePatchRect" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -176.0
margin_right = 248.0
margin_bottom = 128.0

[node name="TextureRect2" type="ColorRect" parent="SettingsMenu/SettingsRectangle"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="PausedRect" type="NinePatchRect" parent="SettingsMenu/SettingsRectangle"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 24.0
margin_right = 88.0
margin_bottom = 71.0

[node name="Label" type="Label" parent="SettingsMenu/SettingsRectangle/PausedRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
align = 1
valign = 1
uppercase = true

[node name="RetryButton2" type="ColorRect" parent="SettingsMenu/SettingsRectangle"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.0
margin_top = 104.0
margin_right = -4.0
margin_bottom = 144.0
color = Color( 1, 0, 0.431373, 0.501961 )

[node name="Label" type="Label" parent="SettingsMenu/SettingsRectangle/RetryButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
text = "retry"
align = 1
valign = 1
uppercase = true

[node name="RetryButton" type="Button" parent="SettingsMenu/SettingsRectangle/RetryButton2"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="QuitButton2" type="ColorRect" parent="SettingsMenu/SettingsRectangle"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = 104.0
margin_right = 156.0
margin_bottom = 144.0
color = Color( 1, 0, 0.431373, 0.501961 )

[node name="Label" type="Label" parent="SettingsMenu/SettingsRectangle/QuitButton2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
theme = ExtResource( 7 )
text = "start menu"
align = 1
valign = 1
uppercase = true

[node name="QuitButton" type="Button" parent="SettingsMenu/SettingsRectangle/QuitButton2"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VolumeControl" type="NinePatchRect" parent="SettingsMenu/SettingsRectangle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -20.0
margin_right = 144.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="SettingsMenu/SettingsRectangle/VolumeControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -16.0
margin_right = -68.0
margin_bottom = 12.0
theme = ExtResource( 7 )
text = "MUSIC"

[node name="HSlider" type="HSlider" parent="SettingsMenu/SettingsRectangle/VolumeControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -8.0
margin_right = 132.0
margin_bottom = 8.0
min_value = -60.0
max_value = 5.0
step = 2.5
value = -15.0
ticks_on_borders = true

[node name="VolumeControl2" type="NinePatchRect" parent="SettingsMenu/SettingsRectangle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 4.0
margin_right = 144.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="SettingsMenu/SettingsRectangle/VolumeControl2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -16.0
margin_right = -68.0
margin_bottom = 12.0
theme = ExtResource( 7 )
text = "MUTE"

[node name="CheckButton" type="CheckButton" parent="SettingsMenu/SettingsRectangle/VolumeControl2"]
margin_left = 72.0
margin_right = 148.0
margin_bottom = 40.0

[node name="PauseButton" type="NinePatchRect" parent="."]
pause_mode = 2
editor/display_folded = true
margin_left = 540.0
margin_top = 10.0
margin_right = 580.0
margin_bottom = 50.0
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="PauseButton"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="TextureRect" type="TextureRect" parent="PauseButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true

[node name="PauseButton" type="Button" parent="PauseButton"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonTextures" type="Node" parent="PauseButton"]
script = ExtResource( 11 )
textures = [ ExtResource( 10 ), ExtResource( 12 ) ]

[node name="SettingsButton" type="NinePatchRect" parent="."]
pause_mode = 2
editor/display_folded = true
margin_left = 590.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 50.0
script = ExtResource( 13 )

[node name="ColorRect" type="ColorRect" parent="SettingsButton"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.25098, 0.25098, 0.25098, 0.501961 )

[node name="TextureRect" type="TextureRect" parent="SettingsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -1.0
margin_bottom = -1.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 1

[node name="Button" type="Button" parent="SettingsButton"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ButtonTextures" type="Node" parent="SettingsButton"]
script = ExtResource( 11 )
textures = [ ExtResource( 14 ), ExtResource( 15 ) ]

[node name="LoseScreen" type="NinePatchRect" parent="."]
pause_mode = 2
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="LoseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -562.657, -146.033 )
color = Color( 0.25098, 0.25098, 0.25098, 0.784314 )

[node name="DefeatFlavor" type="Label" parent="LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -27.0
margin_right = 310.0
margin_bottom = 80.0
theme = ExtResource( 7 )
text = "Sometimes fear gets the best of us. The denizens of the Heart Planet will not give up, and are always ready to fight fear with love"
align = 1
valign = 1
autowrap = true

[node name="DefeatLabel" type="Label" parent="LoseScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -296.0
margin_top = -104.0
margin_right = 296.0
margin_bottom = -23.0
custom_fonts/font = SubResource( 2 )
text = "DEFEAT"
align = 1
valign = 1

[node name="RetryButton" type="ColorRect" parent="LoseScreen"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = 88.0
margin_right = -16.0
margin_bottom = 128.0
color = Color( 1, 0, 0.431373, 0.501961 )

[node name="Label" type="Label" parent="LoseScreen/RetryButton"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
text = "retry"
align = 1
valign = 1
uppercase = true

[node name="RetryButton" type="Button" parent="LoseScreen/RetryButton"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="QuitButton" type="ColorRect" parent="LoseScreen"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = 88.0
margin_right = 144.0
margin_bottom = 128.0
color = Color( 1, 0, 0.431373, 0.501961 )

[node name="Label" type="Label" parent="LoseScreen/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
theme = ExtResource( 7 )
text = "start menu"
align = 1
valign = 1
uppercase = true

[node name="QuitButton" type="Button" parent="LoseScreen/QuitButton"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="pressed" from="SettingsMenu/SettingsRectangle/RetryButton2/RetryButton" to="LoseScreen" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="SettingsMenu/SettingsRectangle/QuitButton2/QuitButton" to="LoseScreen" method="_on_QuitButton_pressed"]
[connection signal="mouse_exited" from="SettingsMenu/SettingsRectangle/VolumeControl/HSlider" to="." method="_on_HSlider_mouse_exited"]
[connection signal="value_changed" from="SettingsMenu/SettingsRectangle/VolumeControl/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="mouse_exited" from="SettingsMenu/SettingsRectangle/VolumeControl2/CheckButton" to="." method="_on_CheckButton_mouse_exited"]
[connection signal="toggled" from="SettingsMenu/SettingsRectangle/VolumeControl2/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="PauseButton/PauseButton" to="PauseButton" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="SettingsButton/Button" to="SettingsButton" method="_on_Button_pressed"]
[connection signal="pressed" from="LoseScreen/RetryButton/RetryButton" to="LoseScreen" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="LoseScreen/QuitButton/QuitButton" to="LoseScreen" method="_on_QuitButton_pressed"]
